--- a/index.html
+++ b/index.html
@@ -8,11 +8,20 @@
   <title>kadai5</title>
 </head>
 <body>
-  <header>
+
+
+  <!-- header -->
+  <header class="header">
     <div class="header__inr">
-      <div class="hedaer__icon"></div>
-      <div class="hedaer__h1">LIG<span>INC.</span></div>
-      <div class="hedaer__menu">
+      <div class="header__icon">
+        <a href=""><img src="image/facebook.png" alt=""></a>
+        <a href=""><img src="image/twitter.png" alt=""></a>
+        <a href=""><img src="image/inquiry.png" alt=""></a>
+      </div>
+
+      <div class="header__h1"><a href=""><img src="image/header-logo.png" alt=""></a></div>
+
+      <div class="header__menu">
         <ul>
           <li><a href="">WEB</a></li>
           <li><a href="">LIFE</a></li>
@@ -23,8 +32,95 @@
           <li><a href="">英語</a></li>
         </ul>
       </div>
+
     </div>
   </header>
+
+<div class="content">
+
+  <div class="maincontent">
+
+      <div class="maincontent__block new-item">
+  
+        <div class="content__image"><img src="image/maincontent-image1.png" alt=""></div>
+  
+        <div class="content__text">
+          <div class="content__text-top">
+            <div class="titme"><a href="">2016.01.01 FRI</a></div>
+            <div class="category"><a href="">WEB</a></div>
+          </div>
+  
+          <div class="content__text-bottom">
+            <a href=""><p>フォントを擬人化して、そのデザインがもつ雰囲気を再発見してみた（欧文編）</p></a>
+          </div>
+        </div>
+  
+      </div>
+  
+      <div class="maincontent__block new-item">
+  
+        <div class="content__image"><img src="image/maincontent-image2.png" alt=""></div>
+  
+        <div class="content__text">
+          <div class="content__text-top">
+            <div class="titme"><a href="">2016.01.01 FRI</a></div>
+            <div class="category"><a href="">LIFE</a></div>
+          </div>
+  
+          <div class="content__text-bottom">
+            <a href=""><p>フォントを擬人化して、そのデザインがもつ雰囲気を再発見してみた（欧文編）</p></a>
+          </div>
+        </div>
+  
+      </div>
+  
+      <div class="maincontent__block">
+  
+        <div class="content__image"><img src="image/maincontent-image3.png" alt=""></div>
+  
+        <div class="content__text">
+          <div class="content__text-top">
+            <div class="titme"><a href="">2016.01.01 FRI</a></div>
+            <div class="category"><a href="">漫画</a></div>
+          </div>
+  
+          <div class="content__text-bottom">
+            <a href=""><p>フォントを擬人化して、そのデザインがもつ雰囲気を再発見してみた（欧文編）</p></a>
+          </div>
+        </div>
+  
+      </div>
+  
+  
+    </div>
+
+  <div class="sidecontent">
+
+    <div class="sidecontent__image">
+      <img src="image/sidecontent.png" alt="">
+    </div>
+
+    <div class="sidecontent__category">
+
+      <span class="category__list">カテゴリ一覧</span>
+
+      <div class="category__menu">
+        <ul>
+          <li class="bordar-bottom-none"><a href="">すべて</a</li>
+          <li class="bordar-bottom-none"><a href="">殿堂入り</a></li>
+          <li class="bordar-bottom-none"><a href="">おもしろ</a></li>
+          <li class="bordar-bottom-none"><a href="">web制作</a></li>
+          <li class="bordar-bottom-none"><a href="">ライフスタイル</a></li>
+          <li><a href="">ニュース</a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+
+  <div class="top"><a href="#"><img src="image/top.png" alt=""></a></div>
+
+</div>
+ 
  
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
   <script type="text/javascript" src="javascript/style.js"></script>
